# serekes

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.txt  analyze.sh  config.example.toml  config.toml  secrets.example.toml  state.json
.temp/: BUGS.md  TODO.txt
docs/: ARCHITECTURE.md  BUGS.md  OPEN_QUESTIONS.md  REFACTORING_PLAN.md  TODO.txt  USEFUL_COMMANDS.txt  WORKFLOW.md
serekes/: Cargo.toml
serekes/src/: atr.rs  config.rs  main.rs  strategy.rs  telegram.rs  types.rs  velocity.rs
serekes/src/strategy/: gap_arb.rs  mod.rs  traits.rs
src/: Cargo.toml  bot.rs  config.rs  engine.rs  main.rs  telegram.rs  types.rs
src/adapters/: binance.rs  chainlink.rs  clock.rs  coinbase.rs  mod.rs  notion.rs  polymarket_discovery.rs  polymarket_order.rs  polymarket_price.rs  rate_limiter.rs  resolver.rs  telegram.rs
src/bot/: feeds.rs  market.rs  mod.rs
src/common/: config.rs  logger.rs  mod.rs  time.rs
src/domain/: market.rs  mod.rs  order.rs  tick_context.rs
src/domain/strategy/: bono.rs  konzerva.rs  lag_exploiter.rs  mod.rs  spender.rs
src/engine/: auth.rs  mod.rs  order.rs  run.rs  traits.rs
src/engine/strategies/: bono.rs  mod.rs
src/feeds/: binance.rs  chainlink.rs  coinbase.rs  deribit.rs  mod.rs  polymarket.rs
src/integrations/: binance.rs  coinbase.rs  mod.rs  notion.rs  polymarket.rs  telegram.rs
src/integrations/polymarket/: discovery.rs  mod.rs  price_ws.rs  resolver.rs
src/notion/: mod.rs
src/ports/: clock.rs  exchange.rs  market_discovery.rs  market_price.rs  mod.rs  notification.rs  persistence.rs  price_feed.rs
src/strategies/: bono.rs
src/strategy/: bono.rs  konzerva.rs  mod.rs
src/telegram/: commands.rs  mod.rs
src/types/: market.rs  mod.rs  order.rs  order_intent.rs  strategy.rs  summary.rs  tick_context.rs  token_direction.rs  trade.rs
