[package]
name = "serekes"
version = "0.1.0"
edition = "2021"
default-run = "serekes"

[[bin]]
name = "serekes"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
url = "2.4"
toml = "0.8"
log = "0.4"
env_logger = "0.10"
futures-util = "0.3"
polymarket-client-sdk = { version = "0.4", features = ["clob", "ws", "gamma", "heartbeats"] }
alloy-signer-local = "1.7.3"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
opt-level = 3
strip = true
