[package]
name = "serekes"
version = "0.1.0"
edition = "2021"
default-run = "serekes"

[[bin]]
name = "serekes"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.50", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
url = "2.5"
toml = "1.0"
log = "0.4"
env_logger = "0.11"
futures-util = "0.3"
polymarket-client-sdk = { version = "0.4", features = ["clob", "ws", "gamma", "heartbeats"] }
alloy-signer-local = "1.7.3"
teloxide = { version = "0.17", features = ["macros"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
rustls = { version = "0.23", features = ["ring"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = 'abort'
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = 2
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 1
debug = false