[package]
name = "serekes"
version = "0.1.0"
edition = "2021"
default-run = "serekes"

[[bin]]
name = "serekes"
path = "main.rs"

[dependencies]
tokio = { version = "1.28", features = ["rt-multi-thread", "time", "sync", "signal", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
url = "2.4"
toml = "0.8"
env_logger = "0.10"
futures-util = "0.3"
polymarket-client-sdk = { version = "0.3", features = ["ws", "gamma"] }
alloy-signer-local = "1.7.3"
alloy-signer = "1.7.3"
